test/files/parser/errors/assign-number.otest
name = "Assign to number"
line = 2
character = 1
error = 'Expected variable name, received "42".'

---

42 = 0
